<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E4A9"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/signup"
        android:textStyle="italic"
        android:textSize="50dp"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtEmail1"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#989696"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#A6A5A5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword2"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="200dp"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:textColorHint="#959292"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/edtPassword1"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:textColorHint="#8C8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword2" />

    <Button
        android:id="@+id/sgn"
        android:layout_width="112dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword1"
        app:layout_constraintVertical_bias="0.268"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>